--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@
 
 /*------------------------------------------- header-------------------------------------------------------------*/
 .contenedor-grid header{
-  background-color:pink;
+  background: linear-gradient(
+45deg
+, #ea87e8, transparent);
   grid-area:header;
   width: 100%;
   height: 130px;
