--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@ padding: 10px 0;
   margin-top: 20px;
 display: flex;
   flex-direction: row;
-  height: 400px;
+  height: auto;
   width: 75%;
   align-items: center;
   justify-content: center;
